// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`setAttributeFilterParentHandler > should emit the appropriate events for valid set attribute filter parent command 1`] = `
[
  {
    "commandType": "GDC.DASH/CMD.FILTER_CONTEXT.ATTRIBUTE_FILTER.SET_PARENTS",
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.FILTER_CONTEXT.ATTRIBUTE_FILTER.PARENT_CHANGED",
  },
  {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.FILTER_CONTEXT.CHANGED",
  },
]
`;

exports[`setAttributeFilterParentHandler > should emit the appropriate events when trying to set parent of a non-existent attribute filter 1`] = `
[
  {
    "commandType": "GDC.DASH/CMD.FILTER_CONTEXT.ATTRIBUTE_FILTER.SET_PARENTS",
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  {
    "correlationId": undefined,
    "type": "GDC.DASH/EVT.COMMAND.FAILED",
  },
]
`;

exports[`setAttributeFilterParentHandler > should set the appropriate values in state for valid set attribute filter parent command 1`] = `
{
  "attributeFilter": {
    "attributeElements": {
      "uris": [],
    },
    "displayForm": {
      "uri": "/gdc/md/referenceworkspace/obj/1089",
    },
    "filterElementsBy": [
      {
        "filterLocalIdentifier": "10450fbbd67b4e42b3d1f58e038f2614",
        "over": {
          "attributes": [
            {
              "uri": "/gdc/md/referenceworkspace/obj/1057",
            },
          ],
        },
      },
    ],
    "localIdentifier": "8dd5d9818c5d45198cef0faa652b202b",
    "negativeSelection": true,
  },
}
`;
